--- a/Episode 05 - Let's get Hooked/src/index.css
+++ b/Episode 05 - Let's get Hooked/src/index.css
@@ -4,9 +4,10 @@
     box-sizing: border-box;
 }
 
-body {
-    font-family: 'Poppins', sans-serif;
+body, input, button, textarea, select {
+  font-family: 'Poppins', sans-serif !important;
 }
+
 
 .header {
     width: 100%;
@@ -17,10 +18,22 @@ body {
     align-items: center;
     border-bottom: 1px solid #ccc;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    background-color: #14181e;
+    overflow: hidden;
+    color: #f8fdff;
 }
 
 .header .logo-container img {
-    width: 100px;
+    width: 140px;
+    height: 140px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.nav-items {
+    display: flex;
+    gap: 3rem;
+    align-items: center;
 }
 
 .header .nav-items ul {
@@ -31,16 +44,29 @@ body {
     text-transform: uppercase;
 }
 
+.login-btn {
+    background-color: #bd863e;
+    color: #fffdf4;
+    padding: 0.35rem 1.25rem;
+    border: 0;
+    border-radius: 7px;
+    font-size: 1rem;
+    font-weight: 300;
+    cursor: pointer;
+    width: 100px;
+}
+
 .body {
     width: 100%;
-    height: 100%;
+    height: 88vh;
     background-color: #cccccc25;
 }
 
 .res-container {
     width: 100%;
     /* background-color: aliceblue; */
-    padding: 2rem 1rem;
+    padding: 0 1rem;
+    padding-bottom: 1rem;
     display: flex;
     justify-content: center;
     gap: 2.5rem;
@@ -81,10 +107,11 @@ body {
     transition: all 0.3s ease;
 }
 
-.res-card h3{
+.res-card h3 {
     font-size: 1.2rem;
 }
-.res-card p{
+
+.res-card p {
     font-size: 0.90rem;
 }
 
@@ -95,23 +122,34 @@ body {
 }
 
 .res-details h6 {
-    background-color: rgb(8, 185, 8);
+    background-color: #176423;
     color: #fff;
-    padding: 2px 4px;
+    padding: 2px 6px;
+    border-radius: 5px;
     text-transform: uppercase;
     font-size: 10px;
+    font-weight: 500;
+}
+
+
+.search-container {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1.25rem 3rem;
+    border-bottom: #14181e2c 1px solid;
+    margin-bottom: 1.25rem;
 }
 
 .filter {
-    width: 100%;
     height: 7vh;
-    padding: 2.75rem 3rem;
     display: flex;
     justify-content: end;
     align-items: center;
 }
 
-.filter input {
+.search-container input {
     width: 300px;
     height: 2rem;
     border-radius: 5px;
@@ -125,12 +163,55 @@ input:focus {
 }
 
 .filter button {
-    width: 100px;
+    width: fit-content;
+    padding: 0 1rem;
     height: 2rem;
     border-radius: 5px;
     border: none;
-    margin-left: 1rem;
     background-color: #007bff;
     color: white;
     cursor: pointer;
+}
+
+.search-box button {
+    width: fit-content;
+    padding: 0 1rem;
+    height: 2rem;
+    border-radius: 5px;
+    border: none;
+    background-color: #f75201;
+    color: white;
+    cursor: pointer;
+}
+
+.search-box {
+    display: flex;
+    gap: 2rem;
+}
+
+.shimmer-container {
+    width: 100%;
+    /* background-color: aliceblue; */
+    padding: 2rem 1rem;
+    display: flex;
+    justify-content: center;
+    gap: 2.5rem;
+    flex-wrap: wrap;
+}
+
+.shimmer-card {
+    width: 250px;
+    min-height: 350px;
+    border: 1px solid rgba(0, 0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    padding: 0.75rem;
+    gap: 0.75rem;
+    overflow: hidden;
+    box-shadow: 0 0px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    /* background-color: #fff; */
+    transition: all 0.3s ease;
+    justify-content: space-between;
+    background-color: #f0f0f0;
 }
