--- a/Episode 05 - Let's get Hooked/src/index.css
+++ b/Episode 05 - Let's get Hooked/src/index.css
@@ -8,6 +8,11 @@ body, input, button, textarea, select {
   font-family: 'Poppins', sans-serif !important;
 }
 
+body{
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
 
 .header {
     width: 100%;
@@ -192,7 +197,7 @@ input:focus {
 .shimmer-container {
     width: 100%;
     /* background-color: aliceblue; */
-    padding: 2rem 1rem;
+    /* padding: 2rem 1rem; */
     display: flex;
     justify-content: center;
     gap: 2.5rem;
@@ -214,4 +219,12 @@ input:focus {
     transition: all 0.3s ease;
     justify-content: space-between;
     background-color: #f0f0f0;
+}
+
+.shimmer-header{
+    width: 100%;
+    height: 12vh;
+    padding: 1rem 3rem;
+    background-color: #f0f0f0;
+    border-radius: 5px;
 }
